--- a/index.org
+++ b/index.org
@@ -299,8 +299,7 @@ So I thought what's the other 10?  Here's a few contenders for my work:
   
 #+end_src
 
-*** TODO 
-*** getting the test data
+*** COMMENT getting the test data
 #+name:get-test-data
 #+begin_src R :session *R* :tangle no :exports none :eval no
 ################################################################
@@ -528,11 +527,20 @@ So I thought what's the other 10?  Here's a few contenders for my work:
   
   In this post I use the tool produced at the ANU by the DataCommons team.  This requires Python3.
   
+  # What does it do?
+  The script only creates new collection records. The functionality to edit records didn’t make it into the script as the expectation is that automated ingests will only require creation of new datasets to which files will be uploaded. 
+  
+  Users can feel free to tweak the collection parameter file to their liking in the development environment until happy with the results.
+  
   # Create the metadata.txt
-
+  
   You need to get the python scripts and conf file from the ANU DataCommons team.  Store these somewhere handy and move to that directory.
   
-  change the anudc.conf: to test out the scripts by creating some sample records, please uncomment the “host” field in the file that points to dc7-dev2.anu.edu.au:8443 , and comment out the one that points to datacommons.anu.edu.au:8443  (NOTE THAT I COULDNT CREATE RECORDS IN THE DEV SERVER)
+  change the anudc.conf: to test out the scripts by creating some sample records, please uncomment the “host” field in the file that points to dc7-dev2.anu.edu.au:8443 , and comment out the one that points to datacommons.anu.edu.au:8443.
+  
+  Also you get a different token in dev and prod servers for security reasons you cannot use the same token. Also, storing your username and password in plain text is not recommended and is to be used only for debugging purposes. Also, in my case I had to change the owner group to ‘5’ when creating records in dev. In prod, it’s 6.
+  
+  You can look int the "Keys.txt" file that contains the full list of values that can be specified in this metadata.txt file.     
   
   #### Code:
       setwd("~/tools/dcupload")
@@ -553,8 +561,11 @@ So I thought what's the other 10?  Here's a few contenders for my work:
       [metadata]
       type = Collection
       subType = dataset
-      ownerGroup = 6
-      name = Test Dataset 12/10/2013
+      ownerGroup = 5
+      # 6 on production, 5 on dev
+      name = Civil Status, Gender and Activity Sector
+      briefDesc = An example, fictional dataset for Decision Tree Models
+      citationCreator = Ritschard, G. (2006). Computing and using the deviance with classification trees. In Compstat 2006 - Proceedings in Computational Statistics 17th Symposium Held in Rome, Italy, 2006.
       email = ivan.hanigan@anu.edu.au
       anzforSubject = 1601
        
@@ -576,63 +587,69 @@ So I thought what's the other 10?  Here's a few contenders for my work:
       system("python3 dcuploader.py -c metadata.txt")
   
   <p></p>
+  # What happened?
+  
+  - Looking in the metadata.txt file it now has a pid like "pid = test:3527"        
+  - And we have created a new record in our account on the DataCommons server.
+  
+      
   # go to the website
-  Go to the production server at [This Link](https://datacommons.anu.edu.au:8443/DataCommons)
-  This has created a new record in our account.
+  Now go to [the dev site](https://dc7-dev2.anu.edu.au:8443/DataCommons/) and you can continue editing the record manually in the browser.
+      
+  Or if we have ironed out the wrinkles you could go straight to the production server at [This Link](https://datacommons.anu.edu.au:8443/DataCommons)
   
-  Looking at metadata.txt it has been modified with the new pid.
   
-  # Errors encountered on dev environment
-  When I tried using [the dev site](https://dc7-dev2.anu.edu.au:8443/DataCommons/) I got the following errors:
-
-      ## Creating record at dc7-dev2.anu.edu.au:8443/DataCommons/rest/display/new?layout=def:display&tmplt=tmplt:1 ...
-      ## DEBUG:root:type: Collection
-      ## DEBUG:root:subType: dataset
-      ## DEBUG:root:ownerGroup: 6
-      ## DEBUG:root:name: Test Dataset 12/10/2013
-      ## DEBUG:root:email: ivan.hanigan@anu.edu.au
-      ## DEBUG:root:anzforSubject: 1601
-      ## Status: 302, (Found)
-      ## Body: 
-      ## Traceback (most recent call last):
-      ##   File "dcuploader.py", line 103, in <module>
-      ##     main()
-      ##   File "dcuploader.py", line 66, in main
-      ##     pid = anudc.create_record(metadatafile)
-      ##   File "/home/ivan_hanigan/tools/dcupload/anudclib.py", line 100, in create_record
-      ##     raise Exception("Unable to create record")
-      ## Exception: Unable to create record
-      ## >
-      ####################################################################
-      # AND if I try comment out token and add u number and password (ps
-      # I dont like hard coded passwords in scripts
-      # tried u12344 and pwd, also [u12344] and "u12344" and 12344 etc etc
+  # Uploading the data
+  The dataset gets sent using a Java applet in the browser while you are manually editing the record using the browser.
   
-      ##     Traceback (most recent call last):
-      ##   File "dcuploader.py", line 103, in <module>
-      ##     main()
-      ##   File "dcuploader.py", line 66, in main
-      ##     pid = anudc.create_record(metadatafile)
-      ##   File "/home/ivan_hanigan/tools/dcupload/anudclib.py", line 82, in create_record
-      ##     self.__add_auth_header(headers)
-      ##   File "/home/ivan_hanigan/tools/dcupload/anudclib.py", line 38, in __add_auth_header
-      ##     username_password = base64.encodestring("%s:%s" % (username, password)).replace('\n', '')
-      ##   File "/usr/lib/python3.2/base64.py", line 353, in encodestring
-      ##     return encodebytes(s)
-      ##   File "/usr/lib/python3.2/base64.py", line 341, in encodebytes
-      ##     raise TypeError("expected bytes, not %s" % s.__class__.__name__)
-      ## TypeError: expected bytes, not str
-  <p></p>  
   # Notes
+  
+  - After the records get created, the script tries to relate the record to other records as you’ve specified in the collection parameter file in the relations section. If you’re creating a record in dev2, you cannot relate it to a record in production because that record doesn’t exist in dev2. Remember that IDs for records in dev environments have the prefix “test:” while those in production have “anudc:”.
+   
+  - Also, when you ran the script against production the created records were linked with the record with the ID anudc:123. I have now removed those relations. You might want to change that value in your metadata.txt file so the links are established to records that created records actually can be related to. Or for testing purposes, simply delete the entire [relations] section.     
+       
+  
+  
+#+end_src
 
-  - I need to get the Keys.txt file that contains the full list of values that can be specified in this metadata.txt file.     
-  - Dev server not working?  I tried from public, ncephgis VPN and nceph local IP addresses.
-  - Hardcoded password is bad idea
-  - how does dataset get sent?  
-       
-       
+** morpho-and-rfigshare
+#+name:morpho-and-rfigshare-header
+#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-14-morpho-and-rfigshare.md :exports none :eval no :padline no
+  ---
+  name: morpho-and-rfigshare
+  layout: post
+  title: morpho-and-rfigshare
+  date: 2013-10-14
+  categories:
+  - Data Documentation
+  ---
   
+  In this Case Study I will use Morpho to compare directly with reml.
   
+  # Step one: Set up morpho
+  
+  - Follow the instructions at the ASN SuperSite website and install Morpho 1.8 rather than latest version because it has technical issues that stop it from setting permissions.    
+  - [Configure morpho](http://www.tern-supersites.net.au/index.php/data/repository-tutorial).  (I will follow the ASN SuperSite instructions as a future Case Study will be to use their KNB Metacat service).
+  - Do not configure to connect to the Metacat repository, will need a password to be assigned by ASN data manager.
+  
+  # Step 2: Look at the REML created metadata using Morpho
+  
+  - Morpho offers to open existing sets for modification.
+  
+  #### Code: get location of my example dataset
+      require(disentangle)
+      fpath <- system.file(file.path("extdata", "civst_gend_sector.csv"), package="disentangle")
+      fpath
+      dirname(fpath)
+      # [1] "/home/ivan_hanigan/Rlibs/disentangle/extdata"
+  
+  - Morpho > File > import = civst_gend_sector_eml.xml
+  - (not the figshare_civst_gend_sector_eml.xml that was created when sending to figshare)
+  - Error encountered.  could not open metadata, open empty data package.  Offered to upgrade (unable to edit > accepted)
+  - unable to display data, empty data package will be shown
+  - top menu > Documentation > Add/Edit ion
+  # Step 3: Create new datasets with Morpho
+      
 #+end_src
 
 * General Purpose
