--- a/index.org
+++ b/index.org
@@ -131,7 +131,49 @@ This project is my collection of notes and customised software tools for data ma
   ![fit1.png](/images/fit1.png)
 
 #+end_src
-* Data Input
+* Data Input - Remote
+** Database Connection
+*** TODO connect2postgres
+*** TODO connect2oracle
+** Database Input
+*** TODO readOGR2
+*** PSQL dump and restore
+#+name:psql-dump-restore
+#+begin_src sh :tangle no :exports reports :eval no
+# name:psql-dump-restore
+"C:\Program Files\pgAdmin III\1.8\pg_dump.exe" -h ip_address -p 5432 -U user_name -F t -v -i -f "z:pathtobackup_file.backup" -t \"public\".\"table\" databaseName
+
+# Or for an entire schema
+
+"C:\Program Files\pgAdmin III\1.8\pg_dump.exe" -h ip_address -p 5432 -U user_name -F t -v -i -f "z:\path\to\backup_file.backup" -n \"public\" databaseName
+
+#You can dump and restore in a single line directly to your local postgres server
+
+pg_dump -h ip_address -U username -i -t schema.table weather | psql -h localhost postgis
+
+#You can dump and restore in a single line between databases
+
+"C:\Program Files\PostgreSQL\8.3\bin\pg_dump" -h ip_address -U username -i -t schema.table database | "C:\Program Files\PostgreSQL\8.3\bin\psql" -h ipaddress -U username database
+
+#To copy to a CSV file
+
+"C:\Program Files\PostgreSQL\8.3\bin\psql" -h ip_address -d weather -U username -c "COPY \"schema\".\"table\" TO STDOUT WITH CSV HEADER;" > "J:\workdir\filename.csv"
+
+"C:\Program Files\PostgreSQL\8.3\bin\psql" -h ip_address -d weather -U username -c "COPY (select * from schema.table where var = X) TO STDOUT WITH CSV HEADER;" > "J:\workdir\filename.csv"
+#+end_src
+* Data Input - Local
+** Download File from HTTPS
+*** download-file-https-code
+#+name:download-file-https
+#+begin_src R :session *R* :tangle no :exports reports :eval no
+  # use method = curl
+  download.file('https://alliance.anu.edu.au/access/content/group/4e0f55f1-b540-456a-000a-24730b59fccb/R%20Resources/Intro%20to%20R/timedata.csv',
+                '~/timedata.csv',
+                method ='curl'
+                )
+  timedata <- read.csv('~/timedata.csv')
+#+end_src
+
 * Data Operation
 ** COMMENT R-data-munging-blog-posts
 *** wickhams-tidy-tools-only-get-you-90-pct-the-way.md
@@ -189,7 +231,7 @@ So I thought what's the other 10?  Here's a few contenders for my work:
                                                                                  
 #+end_src
 ** R-transform
-#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-10-wickhams-tidy-tools-only-get-you-90-pct-the-way.md :exports none :eval no :padline no
+#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-10-wickhams-tidy-tools-only-get-you-90-pct-the-way.md :exports reports :eval no :padline no
   #### R-transform
       # New columns that are functions of other columns       
       df <- transform(airquality,
@@ -201,7 +243,7 @@ So I thought what's the other 10?  Here's a few contenders for my work:
 
 #+end_src
 ** R-mutate
-#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-10-wickhams-tidy-tools-only-get-you-90-pct-the-way.md :exports none :eval no :padline no
+#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-10-wickhams-tidy-tools-only-get-you-90-pct-the-way.md :exports reports :eval no :padline no
   #### R-mutate
       require(plyr)
       # same thing as transform
@@ -215,7 +257,7 @@ So I thought what's the other 10?  Here's a few contenders for my work:
 
 #+end_src       
 ** R-summarise
-#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-10-wickhams-tidy-tools-only-get-you-90-pct-the-way.md :exports none :eval no :padline no
+#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-10-wickhams-tidy-tools-only-get-you-90-pct-the-way.md :exports reports :eval no :padline no
   #### R-summarise
       # New data.frame where columns are functions of existing columns
       require(plyr)    
@@ -249,16 +291,43 @@ So I thought what's the other 10?  Here's a few contenders for my work:
           return(data_out)
         }
   
-      df2 <- summarise_df(airquality, "Month",
-                         "Temp", "Temp", "Day"
+      df2 <- summarise_df(x = airquality, by = "Month",
+                         var1 = "Temp", var2 = "Temp", var3 = "Day"
                          )
       
       head(df2)
       all.equal(df,df2)
       # TRUE
+  
+  #### Another alternative, if we want to pass the dataset as string too
+      summarise_df2  <- function(x, by, var1, var2, var3)
+        {
+          data_out <- eval(
+            parse(
+              text =
+              sprintf(
+                "ddply(.data = %s,
+                  .variables = '%s',
+                  .fun = summarise,
+                  tmax = max(%s),
+                  tav = mean(%s),
+                  ndays = length(unique(%s))
+                  )", x, by, var1, var2, var3
+                )
+              )
+            )
+          return(data_out)
+        }
+  
+      df3 <- summarise_df2(x = "airquality", by = "Month",
+                           var1 = "Temp", var2 = "Temp", var3 = "Day"
+                           )
+      head(df3)
+      all.equal(df, df3)
+      # TRUE
 #+end_src
 ** R-arrange
-#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-10-wickhams-tidy-tools-only-get-you-90-pct-the-way.md :exports none :eval no :padline no
+#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-10-wickhams-tidy-tools-only-get-you-90-pct-the-way.md :exports reports :eval no :padline no
   #### R-arrange
       # Re-order the rows of a data.frame
       df <- arrange(airquality, Temp, Ozone)
@@ -681,6 +750,7 @@ So I thought what's the other 10?  Here's a few contenders for my work:
       
 #+end_src
 
+* Exploratory Data Analysis
 ** R-spss-variable-labels-code
 #+name:R-spss-variable-labels
 #+begin_src R :session *R* :tangle no :exports reports :eval no
@@ -719,8 +789,8 @@ So I thought what's the other 10?  Here's a few contenders for my work:
 
 * General Purpose
 * Visualisation
-* Statistics
-** Logistic Regression
+* Statistical Modelling
+** COMMENT Logistic Regression
 *** COMMENT a-great-intro-2-logistic-regression
 #+name:challenger-logistic-header
 #+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-18-challenger-logistic.md :exports none :eval no :padline no
@@ -1272,13 +1342,167 @@ Under hypothesis that less complex (reduced) model is adequate, difference follo
 source("tests/test-tree.chisq.r")
 #+end_src
 
-* COMMENT TODO later
-** Code Editors
-** Graphical User Interfaces
-** Version Control
-** Latex/Sweave
-** R Packages
-** Project Management
-** Operating Systems
-** Big Data Tips
-** Writing
+* Code Editors
+* Workflow Tools
+** R-newnode
+*** COMMENT R-newnode
+#+name:newnode
+#+begin_src R :session *R* :tangle R/newnode.r :exports none :eval no
+  ################################################################
+  # name:newnode
+  newnode<-function(name, inputs=NA, outputs=character(0), graph = 'nodes', newgraph=F, notes=F, code=NA, ttype=NA, plot = T){
+    # USAGE
+    # nodes <- newnode(  # adds to a graph called nodes
+    # name = 'aquire the raw data'  # the name of the node being added 
+    # inputs = REQUIRED c('external sources','collected by researcher') # single or multiple inputs to it
+    # outputs = OPTIONAL c('file server','metadata','cleaning') # single or multiple outputs from it
+    # append=F # append to existing graph?  if False remove old graph of that name and start new
+    # TODO 
+    # nodes <- addEdge(from='analyse using stats package',
+    # to='new data in database server',graph=nodes,weights=1)
+    # INIT
+    # source('http://bioconductor.org/biocLite.R')
+    # biocLite("Rgraphviz")
+    # or may be needed for eg under ubuntu
+    # biocLite("Rgraphviz", configure.args=c("--with-graphviz=/usr"))
+    require(Rgraphviz)
+    # FURTHER INFO
+    # see the Rgraphviz examples
+    # example(layoutGraph)
+    # require(biocGraph) # for imageMap
+    # TODO change names in following
+    dsc <- name
+    i <- inputs
+    o <- outputs
+    #   if(!exists('nodes')) {
+    if(newgraph==T) {    
+      nodes <- new("graphNEL", nodes=c(dsc),
+                 edgemode="directed")
+      # nodes <- addEdge(from=i, to=dsc, graph=nodes, 1)    
+    } else {
+      if(length(grep(dsc,nodes@nodes)) == 0) nodes <- addNode(node=dsc,object=nodes)
+    }  
+    if(sum(i %in% nodes@nodes) != length(i)) {
+      inew <- i[!i %in% nodes@nodes]
+      nodes <- addNode(node=inew,object=nodes)   
+    }
+    nodes <- addEdge(i, dsc, nodes, 1)
+    #}
+    if(length(o) > 0){
+    if(sum(o %in% nodes@nodes) != length(o)) {
+      onew <- o[!o %in% nodes@nodes]
+      nodes <- addNode(node=onew,object=nodes)   
+    }
+    nodes <- addEdge(from=dsc, to=o, graph=nodes, 1)  
+    }
+    if(plot == T){
+      try(silent=T,dev.off())
+      plot(nodes,attrs=list(node=list(label="foo", fillcolor="grey",shape="ellipse", fixedsize=FALSE), edge=list(color="black")))
+    }
+    return(nodes)
+  }
+  
+#+end_src
+*** test-newnode
+#+name:newnode
+#+begin_src R :session *R* :tangle tests/test-newnode.r :exports reports :eval no
+  ################################################################
+  # name:newnode
+  # REQUIRES GRAPHVIZ, AND TO INSTALL RGRAPHVIZ
+  # source('http://bioconductor.org/biocLite.R')
+  # biocLite("Rgraphviz")
+  # or may be needed for eg under ubuntu
+  # biocLite("Rgraphviz", configure.args=c("--with-graphviz=/usr"))
+  # FURTHER INFO
+  # see the Rgraphviz examples
+  # example(layoutGraph)
+  # require(biocGraph) # for imageMap
+  
+  # source("R/newnode.r")
+  require(devtools)
+  install_github("disentangle", "ivanhanigan")
+  require(disentangle)
+  newnode(
+    name = "NAME"
+    ,
+    inputs="INPUT"
+    ,
+    outputs = "OUTPUT"
+    ,
+    graph = 'nodes'
+    ,
+    newgraph=T
+    ,
+    notes=F
+    ,
+    code=NA
+    ,
+    ttype=NA
+    ,
+    plot = T
+    )
+  
+  nodes <- newnode("merge", c("d1", "d2", "d3"), c("EDA"),
+                   newgraph =T)
+  nodes <- newnode("qc", c("data1", "data2", "data3"), c("d1", "d2", "d3"))
+  nodes <- newnode("modelling", "EDA")
+  nodes <- newnode("model checking", "modelling", c("data checking", "reporting"))
+  #require(disentangle)
+  # either edit a spreadsheet with filenames, inputs and outputs 
+  # filesList <- read.csv("exampleFilesList.csv", stringsAsFactors = F)
+  # or 
+  filesList <- read.csv(textConnection(
+  'FILE,INPUTS,OUTPUTS,DESCRIPTION
+  siteIDs,GPS,,latitude and longitude of sites
+  weather,BoM,,weather data from BoM
+  trapped,siteIDs,,counts of species caught in trap
+  biomass,siteIDs,,
+  corralations,"weather,trapped,biomass",report1,A study we published
+  paper1,report1,"open access repository, data package",
+  '), stringsAsFactors = F)
+  # start the graph
+  i <- 1
+  nodes <- newnode(name = filesList[i,1],
+                   inputs = strsplit(filesList$INPUTS, ",")[[i]],
+                   outputs =
+                   strsplit(filesList$OUTPUTS, ",")[[i]]
+                   ,
+                   newgraph=T)
+   
+  for(i in 2:nrow(filesList))
+  {
+    # i <- 2
+    if(length(strsplit(filesList$OUTPUTS, ",")[[i]]) == 0)
+    {
+      nodes <- newnode(name = filesList[i,1],
+                       inputs = strsplit(filesList$INPUTS, ",")[[i]]
+      )    
+    } else {
+      nodes <- newnode(name = filesList[i,1],
+                       inputs = strsplit(filesList$INPUTS, ",")[[i]],
+                       outputs = strsplit(filesList$OUTPUTS, ",")[[i]]
+      )
+    }
+  }
+   
+  #dev.copy2pdf(file='fileTransformations.pdf')
+  #dev.off();
+   
+#+end_src
+*** COMMENT TODO man-newnode
+#+name:newnode
+#+begin_src R :session *R* :tangle no :exports none :eval no
+################################################################
+# name:newnode
+
+#+end_src
+
+
+* Graphical User Interfaces
+* Version Control
+* Latex/Sweave
+* R Packages
+* Project Management
+* Operating Systems
+* Big Data Tips
+* Writing
