--- a/index.org
+++ b/index.org
@@ -855,6 +855,7 @@ So I thought what's the other 10?  Here's a few contenders for my work:
   ################################################################
   # name:get.var.labels
   # from http://stackoverflow.com/a/10261534
+  # this creates the $variable.labels attribute
   get.var.labels = function(data) {
     if(!require(Hmisc)) install.packages('Hmisc', dependencies = TRUE); require(Hmisc)
     a = do.call(llist, data)
